--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </style>
 </head>
 <body onload="initPage()">
+  <div style="position: absolute; top: 0; left: 0;"><input type="file" id="fileUpload" /></div>
   <canvas id="renderer"></canvas>
 </body>
 </html>
