--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
   </style>
 </head>
-<body onload="initPage()">
+<body>
   <div style="position: absolute; top: 0; left: 0;"><input type="file" id="fileUpload" /></div>
   <canvas id="renderer"></canvas>
 </body>
