--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     }
   </style>
 </head>
-<body>
-  <div style="position: absolute; top: 0; left: 0;"><input type="file" id="fileUpload" /></div>
+<body onload="initPage()">
   <canvas id="renderer"></canvas>
 </body>
 </html>
