--- a/index.html
+++ b/index.html
@@ -1,20 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Audio Visualizer</title>
-  <script type="text/javascript" src="script.js"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-    }
-    html, body {
-      overflow: hidden;
-    }
-  </style>
 </head>
 <body onload="initPage()">
-  <canvas id="renderer"></canvas>
+  <select id="song" onchange="play()">
+  </select>
 </body>
 </html>
