--- a/index.html
+++ b/index.html
@@ -1,9 +1,212 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-</head>
-<body onload="initPage()">
-  <select id="song" onchange="play()">
-  </select>
-</body>
+<html>
+	<head>
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,900|Overlock">
+		<style>
+			select {
+				font-family: Overlock;
+			}
+			body {
+				font-family: Montserrat;
+			}
+			h1 {font-weight: 900; font-size: 60px;}
+			h2 {font-weight: 600; font-size: 40px;}
+			#currentPos, #length {
+				font-family: Overlock;
+				width: 10%;
+				font-size: 24px;
+				text-align: left;
+			}
+			#currentPos {text-align: right;}
+			progress {-webkit-appearance: none; width: 80%; height: 24px;}
+			progress::-webkit-progress-bar {background: white; border: 1px solid black;}
+			progress::-webkit-progress-value {background: black;}
+		</style>
+	</head>
+	<body>
+	  <select id="song" onchange="change()">
+	    <option value="Barracuda">Barracuda</option>
+	    <option value="Cascade">Cascade</option>
+	    <option value="Cheat Codes">Cheat Codes</option>
+	    <option value="Checkpoint">Checkpoint</option>
+	    <option value="Chip Zeal">Chip Zeal</option>
+	    <option value="Chronos">Chronos</option>
+	    <option value="Commando Steve">Commando Steve</option>
+	    <option value="Cool Friends">Cool Friends</option>
+	    <option value="Core">Core</option>
+	    <option value="Corrupted">Corrupted</option>
+	    <option value="Courtesy">Courtesy</option>
+	    <option value="Cruise Control">Cruise Control</option>
+	    <option value="Dance of the Incognizant">Dance of the Incognizant</option>
+	    <option value="Destroid 10 - Funk Hole">Destroid 10 - Funk Hole</option>
+	    <option value="Destroid 8 - Annihilate">Destroid 8 - Annihilate</option>
+	    <option value="Final Boss">Final Boss</option>
+	    <option value="Focus">Focus</option>
+	    <option value="FOX">FOX</option>
+	    <option value="FTW">FTW</option>
+	    <option value="Houston">Houston</option>
+	    <option value="HYPE">HYPE</option>
+	    <option value="Into The Zone">Into The Zone</option>
+	    <option value="Legacy">Legacy</option>
+	    <option value="Logic Gatekeeper">Logic Gatekeeper</option>
+	    <option value="Long Live The New Fresh">Long Live The New Fresh</option>
+	    <option value="Milky Ways">Milky Ways</option>
+	    <option value="New Game">New Game</option>
+	    <option value="On The Run">On The Run</option>
+	    <option value="Once Again">Once Again</option>
+	    <option value="Otis">Otis</option>
+	    <option value="Paper Dolls">Paper Dolls</option>
+	    <option value="Parallel Processing">Parallel Processing</option>
+	    <option value="Peer Gynt">Peer Gynt</option>
+	    <option value="Rainbow Road">Rainbow Road</option>
+	    <option value="Sevcon">Sevcon</option>
+	    <option value="Spectra">Spectra</option>
+	    <option value="Sugar Rush">Sugar Rush</option>
+	    <option value="Tension">Tension</option>
+	    <option value="Termination Shock">Termination Shock</option>
+	    <option value="The Art of War">The Art of War</option>
+	    <option value="The Lunar Whale">The Lunar Whale</option>
+      <option value="Till It's Over">Till It's Over</option>
+      <option value="Tokyo Skies">Tokyo Skies</option>
+      <option value="Try This">Try This</option>
+      <option value="Unlocked">Unlocked</option>
+      <option value="Vindicate Me">Vindicate Me</option>
+      <option value="Wicked">Wicked</option>
+    </select><br>
+		<audio controls id="audio">
+			<source src="">
+		</audio>
+		<button onclick="nextSong()">
+			<svg width="40" height="40">
+				<polyline style="stroke: none; fill: black;" points="5,5 20,20 5,35 5,5">
+				<polyline style="stroke: none; fill: black;" points="15,5 30,20 15,35 15,5">
+				<polyline style="stroke: none; fill: black;" points="30,5 35,5 35,35 30,35 30,5">
+			</svg>
+		</button>
+		<div>Currently playing:</div>
+		<h1 id="title"></h1>
+		<div>- by -</div>
+		<h2 id="artist"></h2>
+		<div>
+			<span id="currentPos">0:00</span><progress value="0" max="1" id="progress"></progress><span id="length">0:00</span>
+		</div>
+  </body>
+	<script>
+		setInterval(function() {
+			var length = document.getElementById("audio").duration;
+			var currentPos = document.getElementById("audio").currentTime;
+			var c_m = Math.floor(currentPos / 60);
+			var c_s = Math.floor(currentPos % 60);
+			document.getElementById("currentPos").innerHTML = c_m + ":" + ("0" + c_s).slice(-2);
+			var progress = currentPos / length;
+			document.getElementById("progress").value = progress;
+		}, 0);
+		function change() {
+			var audio = document.getElementById("audio");
+			audio.src = document.getElementById("song").value + ".mp3";
+			audio.load();
+			audio.play();
+			playing();
+		}
+		function nextSong() {
+			var songId = Math.floor(Math.random() * 47);
+			document.getElementById("song").selectedIndex = songId;
+			var audio = document.getElementById("audio");
+			audio.src = document.getElementById("song").value + ".mp3";
+			audio.load();
+			audio.play();
+			playing();
+		}
+		function playing() {
+			document.getElementById("title").innerHTML = document.getElementById("song").value;
+			var artist = document.getElementById("artist");
+			var length = document.getElementById("audio").duration;
+			var l_m = Math.floor(length / 60);
+			var l_s = Math.floor(length % 60);
+			document.getElementById("length").innerHTML = l_m + ":" + ("0" + l_s).slice(-2);
+			switch (document.getElementById("song").selectedIndex) {
+				case 0:
+					artist.innerHTML = "Noisestorm";
+					break;
+				case 1:
+					artist.innerHTML = "Kubbi";
+					break;
+				case 2: case 15: case 26:
+					artist.innerHTML = "Nitro Fun";
+					break;
+				case 3:
+					artist.innerHTML = "Nitro Fun & Hyper Potions";
+					break;
+				case 4: case 19: case 34: case 45:
+					artist.innerHTML = "Big Giant Circles";
+					break;
+				case 5: case 9: case 22: case 23: case 31: case 40:
+					artist.innerHTML = "Danimal Cannon & Zef";
+					break;
+				case 6: case 25:
+					artist.innerHTML = "Bossfight";
+					break;
+				case 7:
+					artist.innerHTML = "Silva Hound";
+					break;
+				case 8: case 11: case 37:
+					artist.innerHTML = "Zef";
+					break;
+				case 10: case 16: case 29: case 35: case 39: case 42:
+					artist.innerHTML = "chipzel";
+					break;
+				case 12:
+					artist.innerHTML = "FantomenK";
+					break;
+				case 13:
+					artist.innerHTML = "Excision & Space Laces";
+					break;
+				case 14:
+					artist.innerHTML = "Excision & Far Too Loud";
+					break;
+				case 17: case 21: case 27:
+					artist.innerHTML = "Shirobon";
+					break;
+				case 18:
+					artist.innerHTML = "Lets Be Friends";
+					break;
+				case 20:
+					artist.innerHTML = "Tokyo Machine";
+					break;
+				case 24:
+					artist.innerHTML = "Danimal Cannon";
+					break;
+				case 28: case 41:
+					artist.innerHTML = "Tristam";
+					break;
+				case 30:
+					artist.innerHTML = "Shawn Daley";
+					break;
+				case 32:
+					artist.innerHTML = "cYsmix";
+					break;
+				case 33:
+					artist.innerHTML = "nanobii";
+					break;
+				case 36:
+					artist.innerHTML = "PIXL";
+					break;
+				case 38:
+					artist.innerHTML = "Sabrepulse";
+					break;
+				case 43:
+					artist.innerHTML = "Pegboard Nerds";
+					break;
+				case 44:
+					artist.innerHTML = "Plesco";
+					break;
+				case 46:
+					artist.innerHTML = "Avenza";
+					break;
+			}
+			audio.addEventListener("ended", function() {
+				nextSong();
+			});
+		}
+	</script>
 </html>
