--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,900|Overlock">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,900|Overlock" rel="stylesheet">
 		<style>
 			select {
 				font-family: Overlock;
