--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 			body {
 				font-family: Montserrat;
 			}
-			h1 {font-weight: 900; font-size: 60px;}
-			h2 {font-weight: 600; font-size: 40px;}
+			h1 {font-weight: 900; font-size: 60px; margin: 0; text-align: center;}
+			h2 {font-weight: 600; font-size: 40px; margin: 0; text-align: center;}
+			div {text-align: center;}
 			#currentPos, #length {
 				font-family: Overlock;
 				width: 10%;
@@ -73,9 +74,6 @@
       <option value="Vindicate Me">Vindicate Me</option>
       <option value="Wicked">Wicked</option>
     </select><br>
-		<audio controls id="audio">
-			<source src="">
-		</audio>
 		<button onclick="nextSong()">
 			<svg width="40" height="40">
 				<polyline style="stroke: none; fill: black;" points="5,5 20,20 5,35 5,5">
@@ -83,6 +81,9 @@
 				<polyline style="stroke: none; fill: black;" points="30,5 35,5 35,35 30,35 30,5">
 			</svg>
 		</button>
+		<audio controls id="audio">
+			<source src="">
+		</audio>
 		<div>Currently playing:</div>
 		<h1 id="title"></h1>
 		<div>- by -</div>
@@ -92,8 +93,8 @@
 		</div>
   </body>
 	<script>
+		var length;
 		setInterval(function() {
-			var length = document.getElementById("audio").duration;
 			var currentPos = document.getElementById("audio").currentTime;
 			var c_m = Math.floor(currentPos / 60);
 			var c_s = Math.floor(currentPos % 60);
@@ -115,12 +116,12 @@
 			audio.src = document.getElementById("song").value + ".mp3";
 			audio.load();
 			audio.play();
+			length = parseInt(document.getElementById("audio").duration);
 			playing();
 		}
 		function playing() {
 			document.getElementById("title").innerHTML = document.getElementById("song").value;
 			var artist = document.getElementById("artist");
-			var length = parseInt(document.getElementById("audio").duration);
 			var l_m = Math.floor(length / 60);
 			var l_s = Math.floor(length % 60);
 			document.getElementById("length").innerHTML = l_m + ":" + ("0" + l_s).slice(-2);
