--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
     </select><br>
 		<button onclick="nextSong()">
 			<svg width="40" height="40">
-				<polyline style="stroke: none; fill: black;" points="5,5 20,20 5,35 5,5" />
-				<polyline style="stroke: none; fill: black;" points="15,5 30,20 15,35 15,5" />
+				<polyline style="stroke: none; fill: black;" points="5,5 30,20 5,35 5,5" />
 				<polyline style="stroke: none; fill: black;" points="30,5 35,5 35,35 30,35 30,5" />
 			</svg>
 		</button>
-		<audio controls id="audio">
+		<audio controls id="audio" style="visibility: hidden;">
 			<source src="">
 		</audio>
 		<div>Currently playing:</div>
