--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 			audio.load();
 			audio.play();
 			playing();
+			setInterval(playProgress, 0);
 		}
 		function nextSong() {
 			var songId = Math.ceil(Math.random() * 47);
@@ -203,7 +204,7 @@
 				nextSong();
 			});
 		}
-		setInterval(function() {
+		function playProgress() {
 			length = document.getElementById("audio").duration;
 			var currentPos = document.getElementById("audio").currentTime;
 			var c_m = Math.floor(currentPos / 60);
@@ -211,6 +212,6 @@
 			document.getElementById("currentPos").innerHTML = c_m + ":" + ("0" + c_s).slice(-2);
 			var progress = currentPos / length;
 			document.getElementById("progress").value = progress;
-		}, 0);
+		}
 	</script>
 </html>
