--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 		</div>
   </body>
 	<script>
-		var length;
+		var length, audio;
 		function change() {
-			var audio = document.getElementById("audio");
+			audio = document.getElementById("audio");
 			audio.src = document.getElementById("song").value + ".mp3";
 			audio.load();
 			audio.play();
@@ -106,7 +106,7 @@
 		function nextSong() {
 			var songId = Math.ceil(Math.random() * 47);
 			document.getElementById("song").selectedIndex = songId;
-			var audio = document.getElementById("audio");
+			audio = document.getElementById("audio");
 			audio.src = document.getElementById("song").value + ".mp3";
 			audio.load();
 			audio.play();
@@ -116,7 +116,7 @@
 		function playing() {
 			document.getElementById("title").innerHTML = document.getElementById("song").value;
 			var artist = document.getElementById("artist");
-			length = document.getElementById("audio").duration;
+			length = audio.duration;
 			var l_m = Math.floor(length / 60);
 			var l_s = Math.floor(length % 60);
 			document.getElementById("length").innerHTML = l_m + ":" + ("0" + l_s).slice(-2);
@@ -201,6 +201,7 @@
 					artist.innerHTML = "Avenza";
 					break;
 			}
+			document.title = document.getElementById("song").value + " by " + artist.innerHTML;
 			audio.addEventListener("ended", function() {
 				nextSong();
 			});
