--- a/index.html
+++ b/index.html
@@ -110,13 +110,12 @@
 			audio.src = document.getElementById("song").value + ".mp3";
 			audio.load();
 			audio.play();
-			length = parseInt(document.getElementById("audio").duration);
 			playing();
 		}
 		function playing() {
 			document.getElementById("title").innerHTML = document.getElementById("song").value;
 			var artist = document.getElementById("artist");
-			length = audio.duration;
+			length = Math.floor(document.getElementById("audio").duration);
 			var l_m = Math.floor(length / 60);
 			var l_s = Math.floor(length % 60);
 			document.getElementById("length").innerHTML = l_m + ":" + ("0" + l_s).slice(-2);
