--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 			audio.src = document.getElementById("song").value + ".mp3";
 			audio.load();
 			audio.play();
-			playing();
 			setInterval(playProgress, 0);
+			playing();
 		}
 		function nextSong() {
 			var songId = Math.ceil(Math.random() * 47);
@@ -115,7 +115,7 @@
 		function playing() {
 			document.getElementById("title").innerHTML = document.getElementById("song").value;
 			var artist = document.getElementById("artist");
-			length = Math.floor(document.getElementById("audio").duration);
+			length = Math.floor(parseInt(document.getElementById("audio").duration));
 			var l_m = Math.floor(length / 60);
 			var l_s = Math.floor(length % 60);
 			document.getElementById("length").innerHTML = l_m + ":" + ("0" + l_s).slice(-2);
@@ -210,7 +210,7 @@
 			var c_m = Math.floor(currentPos / 60);
 			var c_s = Math.floor(currentPos % 60);
 			document.getElementById("currentPos").innerHTML = c_m + ":" + ("0" + c_s).slice(-2);
-			var progress = currentPos / document.getElementById("audio").duration;
+			var progress = currentPos / length;
 			document.getElementById("progress").value = progress;
 		}
 	</script>
