--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<polyline style="stroke: none; fill: black;" points="30,5 35,5 35,35 30,35 30,5" />
 			</svg>
 		</button>
-		<audio controls id="audio" style="visibility: hidden;">
+		<audio controls id="audio" style="visibility: hidden;" preload="metadata">
 			<source src="">
 		</audio>
 		<div>Currently playing:</div>
