--- a/index.html
+++ b/index.html
@@ -109,13 +109,15 @@
 			audio = document.getElementById("audio");
 			audio.src = document.getElementById("song").value + ".mp3";
 			audio.load();
+			audio.addEventListener('loadedmetadata', function() {
+				length = audio.duration;
+			});
 			audio.play();
 			playing();
 		}
 		function playing() {
 			document.getElementById("title").innerHTML = document.getElementById("song").value;
 			var artist = document.getElementById("artist");
-			length = Math.floor(parseInt(document.getElementById("audio").duration));
 			var l_m = Math.floor(length / 60);
 			var l_s = Math.floor(length % 60);
 			document.getElementById("length").innerHTML = l_m + ":" + ("0" + l_s).slice(-2);
