--- a/index.html
+++ b/index.html
@@ -82,25 +82,18 @@
 				<polyline style="stroke: none; fill: black;" points="30,5 35,5 35,35 30,35 30,5" />
 			</svg>
 		</button>
-		<audio id="audio" style="visibility: hidden;" preload="metadata">
+		<audio id="audio">
 			<source src="">
 		</audio>
 		<div>Currently playing:</div>
 		<h1 id="title">&nbsp;</h1>
 		<div>- by -</div>
 		<h2 id="artist">&nbsp;</h2>
-		<div>
-			<span id="currentPos">0:00</span><progress value="0" max="1" id="progress"></progress><span id="length">0:00</span>
-		</div>
   </body>
 	<script>
-		var length = 0, audio = document.getElementById("audio");
-		setInterval(playProgress, 0);
+		var audio = document.getElementById("audio");
 		function change() {
 			audio.src = document.getElementById("song").value + ".mp3";
-			audio.addEventListener('loadedmetadata', function(event) {
-				length = audio.duration;
-			});
 			audio.load();
 			audio.play();
 			playing();
@@ -110,18 +103,12 @@
 			document.getElementById("song").selectedIndex = songId;
 			audio.src = document.getElementById("song").value + ".mp3";
 			audio.load();
-			audio.addEventListener('loadedmetadata', function(event) {
-				length = audio.duration;
-			});
 			audio.play();
 			playing();
 		}
 		function playing() {
 			document.getElementById("title").innerHTML = document.getElementById("song").value;
 			var artist = document.getElementById("artist");
-			var l_m = Math.floor(length / 60);
-			var l_s = Math.floor(length % 60);
-			document.getElementById("length").innerHTML = l_m + ":" + ("0" + l_s).slice(-2);
 			var index = document.getElementById("song").selectedIndex;
 			switch (index) {
 				case 0:
@@ -207,14 +194,6 @@
 			audio.addEventListener("ended", function() {
 				nextSong();
 			});
-		}
-		function playProgress() {
-			var currentPos = document.getElementById("audio").currentTime;
-			var c_m = Math.floor(currentPos / 60);
-			var c_s = Math.floor(currentPos % 60);
-			document.getElementById("currentPos").innerHTML = c_m + ":" + ("0" + c_s).slice(-2);
-			var progress = currentPos / length;
-			document.getElementById("progress").value = progress;
 		}
 	</script>
 </html>
