--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 			#currentPos, #length {
 				font-family: Overlock;
 				width: 7%;
+				margin-right: 3%;
 				font-size: 24px;
 				text-align: left;
 			}
 			#currentPos {text-align: right;}
-			progress {-webkit-appearance: none; width: 93%; height: 24px;}
+			progress {-webkit-appearance: none; width: 90%; height: 24px;}
 			progress::-webkit-progress-bar {background: white; border: 1px solid black;}
 			progress::-webkit-progress-value {background: black;}
 		</style>
