--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 				case 5: case 9: case 22: case 23: case 31: case 40:
 					artist.innerHTML = "Danimal Cannon & Zef";
 					if (index == 5) {
+						lenElem.innerHTML = "4:29";
 					}
 					break;
 				case 6: case 25:
